--- a/style.css
+++ b/style.css
@@ -227,3 +227,25 @@ footer{
 .footer-text{
   color:#fff;
 }
+
+.social i{
+  color:black;
+}
+
+@media screen and (max-width:1024px){
+  .social i{
+    color:green;
+  }
+}
+
+@media screen and (max-width:768px){
+  .social i{
+    color:red;
+  }
+}
+
+@media screen and (max-width:425px){
+  .social i{
+    color:blue;
+  }
+}
