--- a/style.css
+++ b/style.css
@@ -228,24 +228,75 @@ footer{
   color:#fff;
 }
 
-.social i{
-  color:black;
-}
-
-@media screen and (max-width:1024px){
-  .social i{
-    color:green;
-  }
-}
-
-@media screen and (max-width:768px){
-  .social i{
-    color:red;
-  }
-}
-
 @media screen and (max-width:425px){
-  .social i{
-    color:blue;
+  header{
+    width:100%;
   }
+.nav-list{
+  width:100%;
+  }
+
+.nav-list-item{
+  width:100%;
+  margin: 0 0 10px 0;
+  }
+
+.social{
+  display:none;
+  }
+
+.main-visual{
+  width:100%;
+}
+
+.main-visual-content{
+  width:100%;
+  }
+
+main{
+  width:100%;
+  display:block;
+  }
+
+.blog{
+  width:100%;
+  margin:0;
+ }
+
+.blog-image{
+  width:50%;
+}
+
+.blog-text{
+  width:50%;
+  padding-top:5px;
+}
+
+
+.blog-box{
+   padding-left:2%;
+   padding-right:2%;
+ }
+
+.pagination{
+  margin-bottom:50px;
+}
+
+.sidebar{
+  width:100%;
+  }
+
+.sidebar-contents{
+  padding-left:2%;
+  padding-right:2%;
+}
+
+.instagram-box{
+  width:48%;
+  padding-top:48%;
+  }
+
+.instagram-box:nth-child(odd){
+  margin-right:4%;
+}
 }
